# haskell-lens-exercises

./: README.md  haskell-lens-exercises.cabal
src/: LensEx.hs
