name:                haskell-lens-exercises
version:             0.1.0.0
homepage:            https://github.com/jimmyhuco/haskell-lens-exercises#readme
author:              Jimmy Hu
maintainer:          jimmyhu.co@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , contravariant
                     , mtl
  default-language:    Haskell2010

executable haskell-lens-exercises-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-lens-exercises
  default-language:    Haskell2010

test-suite haskell-lens-exercises-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-lens-exercises
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jimmyhuco/haskell-lens-exercises
